--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 #pocketbase
 pocketbase.exe
+/pb_data/
 
 # dependencies
 /node_modules
